--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,57 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
+  grid-gap: 12px;
+  height: auto;
+  margin-left: 50px;
+  width: auto;
+  padding: 1rem 3rem;
+}
+
+.product-grid {
+  display: contents;
+  /* overflow: hidden; */
+  box-shadow: 0px 0px 65px -15px;
+  border-radius: 15px;
+  margin: 5px;
+  width: 220px;
+  height: 320px; 
+}
+
+.full-card {
+  display: inline;
+  overflow: hidden;
+  box-shadow: 0px 0px 65px -15px;
+  border-radius: 15px;
+  margin: 5px;
+  width: 250px;
+  height: 250px;
+}
+
+.card-image {
+  justify-content: center;
+  width: 100%;
+  height: 60%;
+  padding: 15px;
+  object-fit: contain;
+  /* border-radius: 50px; */
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+}
+
+.image {
+  position: relative;
+  height: calc(100% - 325px);
+  height: 100vh;
+}
