--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,6 +104,7 @@ code {
   right: 0;
   top: 0;
   bottom: 0;
+  z-index: -1;
 
 }
 
@@ -189,4 +190,12 @@ code {
   100%{
     transform: translateY(0px);
   }
+}
+
+.title {
+  font-family: 'Signika Negative', sans-serif;
+  font-size: 50px;
+  position: fixed;
+  left: 20%;
+  top: 50%;
 }
