--- a/client/src/index.css
+++ b/client/src/index.css
@@ -325,27 +325,50 @@ code {
   font-size: small;
 }
 
+.add_listing_bg {
+  margin-left: 40%;
+  margin-top: 50px
+}
+
+#add_listing_form p{
+  font-weight: bold;
+  margin-bottom: 0px;
+}
+
+#add_listing_form input{
+  margin-bottom: 20px;
+  /* border-radius: 10px; */
+}
+
+#add_listing_form button{
+  display: block
+}
+
 #add_listing_form {
-  width: 320px;
+  /* width: 320px;
   height: 420px;
   background: rgb(255, 252, 252);
-  color: rgb(3, 3, 3);
-  top: 50%;
-  left: 20%;
-  position: absolute;
+  color: rgb(3, 3, 3); */
+  /* top: 50%;
+  left: 20%; */
+  /* position: relative;
+  margin-top: 250px;
+  margin-left: 
   transform: translate(-50%, -50%);
   box-sizing: border-box;
   padding: 70px 30px;
   border-radius: 20px;
   border-color: #000;
   padding: 15px;
-  border-width: 1px;
+  border-width: 1px; */
 }
 
 #add_listing_text {
-  position: fixed;
+  /* position: fixed;
   top: 15%;
-  left: 10%
+  left: 10% */
+  margin-left: auto;
+  margin-right: auto
 }
 input {
   border: 0;
